--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 	background-size: cover;
 	z-index:-5;
 	color: white;
-	
+	overflow-x: hidden;
 	font-family: 'Monoton', monospace;
 	font-size: 2em;
 }
